# test-crawler

./: .gitignore  ARCHITECTURE.md  README.md  _analyze.py  _commit.sh  benchmark_results.json  config.autotuned.yaml  config.yaml  pyproject.toml  seeds.txt
crawler/: benchmark.py  main.py  orchestrator.py
crawler/fetcher/: async_fetcher.py  base.py  robots_handler.py
crawler/frontier/: __init__.py  base.py  memory_frontier.py
crawler/parser/: html_parser.py  url_normalizer.py
crawler/politeness/: __init__.py  manager.py  rate_limiter.py
crawler/storage/: base.py  profiler.py  sqlite_storage.py  stats.py
crawler/utils/: checkpoint.py  config.py  crash_notifier.py
integration_tests_new/: test_scheduler_behavior.py  test_worker_behavior.py
unit_tests_new/: test_async_fetcher.py  test_config_loader.py  test_crash_notifier.py  test_html_parser.py  test_memory_frontier.py  test_politeness_manager.py  test_profiler.py  test_rate_limiter.py  test_robots_handler.py  test_sqlite_storage.py  test_url_normalizer.py
